fix: projects column category slider shadow issue
There was a small issue where in projects column category slider, since the padding wasn't too much the shadow would get cropped but now it has enough space.

--- a/src/styles/components/_projectsColumn.scss
+++ b/src/styles/components/_projectsColumn.scss
@@ -6,12 +6,11 @@
 
   @include device("tablet") {
     margin-bottom: 80px;
-    margin-top: 30px;
+    margin-top: 0px;
   }
 
   @include device("mobile") {
     margin-bottom: 80px;
-    margin-top: 30px;
     gap: 10px;
   }
 
@@ -33,7 +32,7 @@
     .projects-column-category {
       width: calc(100% - 90px); // leaves room for arrows
       overflow: hidden;
-      padding: 12px 0;
+      padding: 20px 0;
 
       @include device("tablet") {
         width: 100%;
