--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -75,7 +75,6 @@ a,p,h1,h2,h3,h4,h5,h6{
 
 main {
   width: 75%;
-  margin-top: 50px;
   height: calc(100vh - 50px);
 
   display: flex;
