--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -6,6 +6,7 @@
   height: 100vh;
   padding-left: 2rem;
   padding-right: 2rem;
+  margin-top: 50px;
 
   @include device("tablet") {
     padding-left: 1.3rem;
