--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -3,6 +3,8 @@
   height: 100%;
   padding-left: 3rem;
   padding-right: 3rem;
+  margin-top: 30px;
+
   @include device("tablet") {
     padding-bottom: 60px;
     padding-left: 1.3rem;
